# orbbec_camera_capture_tools

./: .gitignore  README.md  capture_orbbec.py  justfile  pyproject.toml
scripts/: camera_device.py  orbbec_device.py
tests/: conftest.py
tests/orbbec/: test_hardware.py  test_structure.py
